css-light: Brigthen accent colors The current value was taken from adwaita's standalone color, but it's a bit too dark for our use, namely it's the same lightness as the fixed cells, bumping it to .92 for better contrast which should also make the numbers underneath easier to read

--- a/data/style.css
+++ b/data/style.css
@@ -1,14 +1,14 @@
 /*contains styles that are always present.*/
 :root {
-  --sudoku-accent-blue: oklch(0.85 0.25 270);
-  --sudoku-accent-teal: oklch(0.85 0.25 205);
-  --sudoku-accent-green: oklch(0.85 0.25 145);
-  --sudoku-accent-yellow: oklch(0.85 0.25 100);
-  --sudoku-accent-orange: oklch(0.85 0.25 60);
-  --sudoku-accent-red: oklch(0.85 0.25 20);
-  --sudoku-accent-pink: oklch(0.85 0.25 345);
-  --sudoku-accent-purple: oklch(0.85 0.25 300);
-  --sudoku-accent-slate: oklch(0.85 0.05 250);
+  --sudoku-accent-blue: oklch(0.92 0.25 270);
+  --sudoku-accent-teal: oklch(0.92 0.25 205);
+  --sudoku-accent-green: oklch(0.92 0.25 145);
+  --sudoku-accent-yellow: oklch(0.92 0.25 100);
+  --sudoku-accent-orange: oklch(0.92 0.25 60);
+  --sudoku-accent-red: oklch(0.92 0.25 20);
+  --sudoku-accent-pink: oklch(0.92 0.25 345);
+  --sudoku-accent-purple: oklch(0.92 0.25 300);
+  --sudoku-accent-slate: oklch(0.92 0.05 250);
 }
 grid.board {
   border: 2px solid #333;
